@@ -74,7 +74,7 @@ public class EdgeEventServiceTest extends AbstractServiceTest {
         PageData<EdgeEvent> edgeEvents = edgeEventService.findEdgeEvents(tenantId, edgeId, 0L, null, new TimePageLink(1));
         Assert.assertFalse(edgeEvents.getData().isEmpty());
 
-        EdgeEvent saved = edgeEvents.getData().get(0);
+        EdgeEvent saved = edgeEvents.getData().getFirst();
         Assert.assertEquals(saved.getTenantId(), edgeEvent.getTenantId());
         Assert.assertEquals(saved.getEdgeId(), edgeEvent.getEdgeId());
         Assert.assertEquals(saved.getEntityId(), edgeEvent.getEntityId());
@@ -124,7 +124,7 @@ public class EdgeEventServiceTest extends AbstractServiceTest {
 
         Assert.assertNotNull(edgeEvents.getData());
         Assert.assertEquals(1, edgeEvents.getData().size());
-        Assert.assertEquals(Uuids.startOf(eventTime + 1), edgeEvents.getData().get(0).getUuidId());
+        Assert.assertEquals(Uuids.startOf(eventTime + 1), edgeEvents.getData().getFirst().getUuidId());
         Assert.assertFalse(edgeEvents.hasNext());
 
         edgeEventDao.cleanupEvents(1);
